# three-ediitor

./: .gitignore  CEF_INTEGRATION_GUIDE.txt  CONNECTION_SETUP_COMPLETE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  README.md  ROADMAP.md  TESTING_CONNECTION.md  start-editor.sh  tauri.conf.json
.tauri-backup/: Cargo.toml
.tauri-backup/src/: main.rs  project_manager.rs  websocket.rs
editor/: tauri.conf.json
editor/src/: main.rs  websocket.rs
editor/src/editor/: index.html
editor/ui/: README.md  editor-main.ts  editor.js  index.html  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.js
engine/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
engine/src/: demo.ts  index.ts
engine/src/bridge/: EditorBridge.ts
engine/src/components/: CameraComponent.ts  LightComponent.ts  MeshComponent.ts  TransformComponent.ts  index.ts
engine/src/ecs/: Component.ts  Entity.ts  System.ts  World.ts
engine/src/editor/: Config.ts  Editor.ts  EditorControls.ts  History.ts  Resizer.ts  Selector.ts  Signals.ts  Storage.ts  Strings.ts  index.ts
engine/src/renderer/: Renderer.ts
engine/src/systems/: AxisGizmoSystem.ts  CameraSystem.ts  EditorCameraSystem.ts  GizmoSystem.ts  LightSystem.ts  RenderSystem.ts  index.ts
engine/src/utils/: Object3DRegistry.ts
icons/: create_icon.ps1
src/: main.rs  project_manager.rs
src/editor/: index.html  kill-port.js  nodes.html  package-lock.json  package.json  vite.config.js
src/editor/css/: asset-selector.css  design-system.css  main.css  menubar.css  nodes.css  resizer.css  sidebar-script.css  sidebar.css  tsl-node-overrides.css  ui-base.css  viewport.css
src/editor/js/: AssetObjectLoader.js  AssetPreviewRenderer.js  AssetSelector.js  Config.js  Editor.js  EditorControls.js  History.js  Input.js  LiveMaterialPreview.js  Loader.js  LoaderUtils.js  Menubar.Add.js  Menubar.Edit.js  Menubar.File.js  Menubar.Help.js  Menubar.Status.js  Menubar.View.js  Menubar.js  Modal.js  ModelParser.js  ModuleSystem.js  ParticleSystemFactory.js  Player.js  Resizer.js  Script.js  ScriptCompiler.js  Selector.js  Sidebar.Asset.js  Sidebar.Assets.js  Sidebar.Geometry.BoxGeometry.js  Sidebar.Geometry.BufferGeometry.js  Sidebar.Geometry.CapsuleGeometry.js  Sidebar.Geometry.CircleGeometry.js  (+55 more)
src/engine/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/hub/: index.html
src/rust/: Cargo.toml  tauri.conf.json
src/rust/capabilities/: default.json  dev-localhost.json
src/rust/src/: lib.rs  project_manager.rs
(+155 files in other folders)
