[package]
name = "three-engine-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full", "sync"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tauri = { version = "1.5", features = ["shell-open", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-create-dir", "fs-remove-dir", "fs-remove-file", "dialog-open", "dialog-save"] }
parking_lot = "0.12"
dirs = "5.0"
sanitize-filename = "0.5"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

