[package]
name = "three-engine-editor"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 3

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full", "sync"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tauri = { version = "2.0", features = ["wry"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
parking_lot = "0.12"
dirs = "5.0"
sanitize-filename = "0.5"
notify = "6.1"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

