[package]
name = "three-engine-editor"
version = "0.1.0"
description = "Three.js Engine Editor"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
opt-level = 0
debug = true
incremental = true

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full", "sync"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tauri = { version = "2.9.5", features = ["wry"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
parking_lot = "0.12"
dirs = "5.0"
sanitize-filename = "0.5"
notify = "6.1"
log = "0.4"
